--- a/App/Frontend/dashboard.html
+++ b/App/Frontend/dashboard.html
@@ -193,13 +193,13 @@
         </div>
         <nav>
             <ul>
-                <li><a href="dashboard.html" class="active">&#8962; Trang chủ</a></li>
-                <li><a href="profile.html">&#128100; Hồ sơ cá nhân</a></li>
-                <li><a href="lop.html">&#128218; Lớp học</a></li>
-                <li><a href="nhiemvu.html">&#128221; Nhiệm vụ</a></li>
-                <li><a href="cansu.html">&#128101; Cán sự</a></li>
-                <li><a href="thongbao.html">&#128276; Thông báo</a></li>
-                <li><a href="index.html" onclick="localStorage.clear()">&#128682; Đăng xuất</a></li>
+                <li><a href="dashboard.html" class="active"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
+                <li><a href="profile.html"><i class="fa-solid fa-user"></i> Hồ sơ cá nhân</a></li>
+                <li><a href="lop.html"><i class="fa-solid fa-users-rectangle"></i> Lớp học</a></li>
+                <li><a href="nhiemvu.html"><i class="fa-solid fa-list-check"></i> Nhiệm vụ</a></li>
+                <li><a href="cansu.html"><i class="fa-solid fa-user-tie"></i> Cán sự</a></li>
+                <li><a href="thongbao.html"><i class="fa-solid fa-bell"></i> Thông báo</a></li>
+                <li><a href="index.html" onclick="localStorage.clear()"><i class="fa-solid fa-arrow-right-from-bracket"></i> Đăng xuất</a></li>
             </ul>
         </nav>
     </div>
@@ -274,6 +274,13 @@
             </div>
         </div>
     </div>
+    <script src="script/auth.js"></script>
+    <script>
+        if (window.checkRole && !checkRole(['giangvien', 'cansu'])) {
+            if (typeof showToast === 'function') showToast('Bạn không có quyền truy cập vào trang này!', 'error');
+            else alert('Bạn không có quyền truy cập vào trang này!');
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
