--- a/App/Frontend/index.html
+++ b/App/Frontend/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <title>Đăng nhập - Quản lý Ban cán sự HUTECH</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <div class="login-container">
-        <h2>Đăng nhập hệ thống</h2>
+        <h2><i class="fa-solid fa-right-to-bracket"></i> Đăng nhập hệ thống</h2>
         <form id="loginForm">
             <input type="text" id="username" placeholder="Tên đăng nhập/MSSV" required>
             <input type="password" id="password" placeholder="Mật khẩu" required>
             <button type="submit">Đăng nhập</button>
         </form>
         <div id="loginError" style="color:red;"></div>
+        <div style="margin-top:10px;text-align:center;">
+            <a href="#" id="forgotPasswordLink" style="color:#2563eb;text-decoration:underline;cursor:pointer;">Quên mật khẩu?</a>
+        </div>
     </div>
     <script src="script/auth.js"></script>
 </body>
