them quen mat khau va doi mat khau

--- a/App/Frontend/dashboard.html
+++ b/App/Frontend/dashboard.html
@@ -199,7 +199,7 @@
                 <li><a href="nhiemvu.html"><i class="fa-solid fa-list-check"></i> Nhiệm vụ</a></li>
                 <li><a href="cansu.html"><i class="fa-solid fa-user-tie"></i> Cán sự</a></li>
                 <li><a href="thongbao.html"><i class="fa-solid fa-bell"></i> Thông báo</a></li>
-                <li><a href="index.html" onclick="localStorage.clear()"><i class="fa-solid fa-arrow-right-from-bracket"></i> Đăng xuất</a></li>
+                <!-- <li><a href="index.html" onclick="localStorage.clear()"><i class="fa-solid fa-arrow-right-from-bracket"></i> Đăng xuất</a></li> -->
             </ul>
         </nav>
     </div>
