--- a/App/Frontend/nhiemvu.html
+++ b/App/Frontend/nhiemvu.html
@@ -34,7 +34,7 @@
                 <li><a href="nhiemvu.html" class="active">&#128221; Nhiệm vụ</a></li>
                 <li><a href="cansu.html">&#128101; Cán sự</a></li>
                 <li><a href="thongbao.html">&#128276; Thông báo</a></li>
-                <li><a href="index.html" onclick="localStorage.clear()">&#128682; Đăng xuất</a></li>
+                <!-- <li><a href="index.html" onclick="localStorage.clear()">&#128682; Đăng xuất</a></li> -->
             </ul>
         </nav>
     </div>
